<resources>
    <string name="app_name">Pet Vet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_login">LoginActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_text">Login</string>
    <string name="user_name">username</string>
    <string name="passord_hint">password</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobile_number">Phone</string>
    <string name="title_activity_pet_registration">PetRegistrationActivity</string>
    <string name="save">save</string>
    <string name="species_lbl_text">Species</string>
    <string name="breed_lbl_text">Breed</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Sex</string>
    <string name="date_of_birth">DOB</string>

</resources>
