<merge xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/TextSytle"
        android:text="@string/gender"/>
    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextSytle"
            android:text="@string/male"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TextSytle"
            android:text="@string/female"/>
    </RadioGroup>
</LinearLayout>
</merge>