<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dataction.petvet.fragments.ProfileActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/personalWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/prop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txtFirstName"
                            style="@style/EditTextStyle"
                            android:editable="false"
                            android:hint="@string/firstName"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txtLastName"
                            style="@style/EditTextStyle"
                            android:editable="false"
                            android:hint="@string/lastName"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/contactWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtEmail"
                        style="@style/EditTextStyle"
                        android:editable="false"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtMobile"
                        style="@style/EditTextStyle"
                        android:editable="false"
                        android:hint="@string/mobile_number"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEmailSignup"
                style="@style/EditTextStyle"
                android:hint="@string/email_id"
                android:editable="false"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtMobile"
                style="@style/EditTextStyle"
                android:hint="@string/mobile_number"
                android:editable="false"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>-->

</ScrollView>
